# opinion

./: .gitignore  .prettierignore  Anchor.toml  DEVELOPMENT_STATUS.md  README.md  demo-simple.js  demo.js  demo.ts  package.json  tsconfig.json  verify.js
employee-rating-system/: test-employee-survey.ts
employee-rating-system/src/: lib.rs
encrypted-ixs/src/: lib.rs
encrypted-opinion-platform/: .gitignore  README.md  env.example  package-lock.json  package.json
encrypted-opinion-platform/anchor/: Anchor.toml  Arcium.toml  Cargo.toml  DEPLOYMENT_STATUS.md  init-comp-defs.ts  package.json  tsconfig.json
encrypted-opinion-platform/anchor/encrypted-ixs/: Cargo.toml
encrypted-opinion-platform/anchor/programs/encrypted-opinion/: Cargo.toml
encrypted-opinion-platform/anchor/programs/encrypted-opinion/src/: lib.rs
encrypted-opinion-platform/anchor/tests/: encrypted-opinion.ts
encrypted-opinion-platform/anchor/types/: arcium-client.d.ts
encrypted-opinion-platform/app/: layout.tsx  page.tsx
encrypted-opinion-platform/components/: CreatePost.tsx  Header.tsx  PostList.tsx  WalletProvider.tsx
encrypted-opinion-platform/lib/: arcium.ts  storage.ts
frontend/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
opinion-system/: opinion-platform.test.ts
programs/encrypted_opinion_mpc/: Cargo.toml
scripts/: bootstrap-comp-defs.ts  init-comp-defs-final.js  init-comp-defs-fixed.js  init-comp-defs-simple.js  init-comp-defs.ts  setup-localnet.sh
test-ledger/: faucet-keypair.json
tests/: opinion-platform.test.ts  voting-system.test.ts
(+22 files in other folders)
