[package]
name = "encrypted-opinion"
version = "0.1.0"
description = "Encrypted Opinion Platform with Arcium & Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "encrypted_opinion"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
arcium-client = { version = "0.3.0", default-features = false }
arcium-macros = { version = "0.3.0" }
arcium-anchor = { version = "0.3.0" }
